--- a/src/Generatetc.css
+++ b/src/Generatetc.css
@@ -155,7 +155,7 @@
   
   .construction-section {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    /* grid-template-columns: repeat(2, 1fr); */
     gap: 15px;
     margin-top: 20px;
   }
